--- a/doc-search/docker-compose.yml
+++ b/doc-search/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - nginx_cache:/var/cache/nginx
     depends_on:
       - doc-search-1
       - doc-search-2
@@ -55,3 +56,6 @@ services:
       - INSTANCE_ID=3
     depends_on:
       - redis-3
+
+volumes:
+  nginx_cache:
