--- a/doc-search/nginx.conf
+++ b/doc-search/nginx.conf
@@ -1,3 +1,6 @@
+# Define cache path and configuration
+proxy_cache_path /var/cache/nginx/doc_search levels=1:2 keys_zone=doc_search_cache:10m max_size=100m inactive=60m use_temp_path=off;
+
 upstream doc_search_backend {
     server doc-search-1:3000;
     server doc-search-2:3000;
@@ -14,7 +17,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Add a custom header to see which instance handled the request
+        # Cache configuration
+        proxy_cache doc_search_cache;
+        proxy_cache_valid 200 302 10s;
+        proxy_cache_valid 404 10s;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        proxy_cache_lock on;
+        
+        # Cache key includes query parameters for search results
+        proxy_cache_key "$scheme$request_method$host$request_uri";
+        
+        # Add cache status headers
+        add_header X-Cache-Status $upstream_cache_status;
         add_header X-Served-By $upstream_addr;
         add_header Access-Control-Allow-Origin *;
     }
