--- a/doc-search/nginx.conf
+++ b/doc-search/nginx.conf
@@ -2,9 +2,9 @@
 proxy_cache_path /var/cache/nginx/doc_search levels=1:2 keys_zone=doc_search_cache:10m max_size=100m inactive=60m use_temp_path=off;
 
 upstream doc_search_backend {
-    server doc-search-1:3000;
-    server doc-search-2:3000;
-    server doc-search-3:3000;
+    server doc-search-1:3000 max_fails=3 fail_timeout=30s;
+    server doc-search-2:3000 max_fails=3 fail_timeout=30s;
+    server doc-search-3:3000 max_fails=3 fail_timeout=30s;
 }
 
 server {
